<resources>
    <string name="app_name">SQILLZ</string>

    <string name="login_button">Login</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="exit_button">Exit</string>

    <string name="user_name_text">Email</string>
    <string name="password_text">Password</string>

    <string name="start_game_text">Start Game</string>
    <string name="highest_scores_text">Highest Scores</string>
    <string name="Logout_text">Logout</string>
    <string name="difficulty_text">Difficulty:</string>
    <string name="speed_text">Speed:</string>.
    <string name="easy_text">Easy</string>
    <string name="medium_text">Medium</string>
    <string name="hard_text">Hard</string>
    <string name="slow_text">Slow</string>
    <string name="fast_text">Fast</string>
    <string name="hello_user">Hello</string>

    <string name="pause_continue_text">start</string>
    <string name="question_text">Question: </string>
    <string name="score_text">Score: </string>

    <string name="play_again_button">Play Again</string>
    <string name="main_menu_button">Main Menu</string>
    <string name="your_score_text">Your Score: </string>
    <string name="your_place_text">Your Place: </string>
    <string name="highest_score_text">Highest Score: </string>
    <string name="gameover_text">GAMEOVER</string>

    <string name="score_tag">playerscoretag</string>
    <string name="username_tag">username_tag</string>
    <string name="diff_tag">diffucltytag</string>
    <string name="speed_tag">speedtag</string>

    <string name="place_text">Place</string>
    <string name="notSavedText" translatable="false">Not Saved</string>
    <string name="name_text">Name</string>
    <string name="back_button">Back</string>

    <string name="Scores_Json_File">Scores_Json_File</string>
    <string name="Scores_Json_String">Scores_Json_String</string>

</resources>