<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/menu_activity"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/background"
    >

    <RadioGroup
        android:id="@+id/speedRG"
        android:layout_width="140dp"
        android:layout_height="131dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="0dp"
        app:layout_constraintStart_toEndOf="@+id/difficultyRG"
        app:layout_constraintTop_toTopOf="@+id/difficultyRG" >

        <RadioButton
            android:id="@+id/slowRG"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:checked="true"
            android:text="@string/slow_text" />

        <RadioButton
            android:id="@+id/fastRG"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/fast_text" />
    </RadioGroup>

    <Button
        android:id="@+id/startGameBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:text="@string/start_game_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/difficultyRG" />

    <Button
        android:id="@+id/highest_scores_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:text="@string/highest_scores_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/startGameBtn" />

    <Button
        android:id="@+id/logOutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="13dp"
        android:text="@string/Logout_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/highest_scores_btn" />

    <TextView
        android:id="@+id/difficultyTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/difficulty_text"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/difficultyRG"
        app:layout_constraintBottom_toTopOf="@+id/difficultyRG" />

    <TextView
        android:id="@+id/speedTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/speed_text"
        android:textColor="#000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@id/speedRG"
        app:layout_constraintBottom_toTopOf="@+id/speedRG" />

    <TextView
        android:id="@+id/helloTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="60dp"
        android:text="@string/hello_user"
        android:textColor="#000000"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/difficultyRG"
        android:layout_width="148dp"
        android:layout_height="137dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/helloTV" >

        <RadioButton
            android:id="@+id/easyRB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:checked="true"
            android:text="@string/easy_text" />

        <RadioButton
            android:id="@+id/mediumRB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/medium_text" />

        <RadioButton
            android:id="@+id/hardRB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/hard_text" />
    </RadioGroup>


</androidx.constraintlayout.widget.ConstraintLayout>